<resources>
    <string name="app_name">PEMILU DESK LUMAJANG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location_permission_required">AKSES LOKASI DIBUTUHKAN</string>
    <string name="location_permission_description">Aplikasi ini membutuhkan akses terhadap lokasi agar sistem wilayah Lumajang dapat berfungsi maksimal</string>
    <string name="location_permission_request">Berikan akses lokasi pada perangkat anda?</string>
    <string name="give_access">Berikan Akses</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="tps_list_title">TPS tempat anda bertugas</string>
    <string name="open_election">Pilih Pemilu</string>
    <string name="data_sent_">Data Terkirim : %s</string>
    <string name="data_verified_">Data Terverifikasi : %s</string>
    <string name="data_not_verified_">Data Belum Terverifikasi : %s</string>
    <string name="choose">Pilih</string>
    <string name="choose_running_election">Pilih Pemilu Berlangsung</string>
    <string name="selfi_at_tps">Yuk, Selfie di TPS</string>
    <string name="take_selfi_info">Ambil foto selfie kamu di TPS sebelum menginput hasil suara. pastikan wajah kamu terlihat dengan jelas dan juga memperlihatkan kondisi terkini diTPS kamu, ya!</string>
    <string name="take_photo">Ambil Foto +</string>
    <string name="next">Lanjutkan</string>
    <string name="selfi_result">Selfi result</string>
    <string name="upload_photo_evidence">Upload Foto Bukti</string>
    <string name="plano">Plano</string>
    <string name="formulir_c1">Formulir C1</string>
    <string name="others">Lainnya</string>
    <string name="notes">Keterangan</string>
    <string name="upload">Upload</string>
    <string name="device_token_s">ID: %s</string>
    <string name="fitur_lokasi_nonaktif">Fitur Lokasi Nonaktif</string>
    <string name="activate_location_tracker_via_settings">Aktif fitur pelacak lokasi melalui pengaturan</string>
    <string name="ok">OK</string>
    <string name="warning">Peringatan</string>
    <string name="error_occured">Terjadi kesalahan</string>
    <string name="tps_location_">Kel. %s Kec. %s</string>
    <string name="please_contact_admin">Silahkan hubungi Admin atau coba beberapa saat lagi</string>
    <string name="data_is_empty">Data kosong</string>
    <string name="tps">TPS</string>
    <string name="form">Formulir</string>
    <string name="session_end">Sesi Habis</string>
    <string name="please_relogin_to_continue">Mohon login ulang untuk melanjutkan</string>
    <string name="try_again">Coba Lagi</string>
    <string name="close">Tutup</string>
    <string name="open_settings">Buka Pengaturan</string>
    <string name="location_access_permission_required">Izin Akses Lokasi Dibutuhkan</string>
    <string name="please_give_location_access_permission">Mohon berikan izin aplikasi ini untuk mengakses lokasi Anda</string>
    <string name="log_out">Log Out</string>
    <string name="sent_at_date_time">Terkirim pada %s</string>
    <string name="input_data_before_date_time">Data dibuat pada %s</string>
    <string name="status_s">Status : %s</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="are_you_done">Sudah selesai?</string>
    <string name="you_need_to_relogin_to_continue">Anda perlu login kembali jika ingin melanjutkan pekerjaan</string>
    <string name="camera_access_permission_required">Akses Kamera dibutuhkan!</string>
    <string name="please_give_camera_access_permission">Mohon beri izin untuk mengakses kamera</string>
    <string name="please_wait">Mohon tunggu</string>
    <string name="failed_to_take_a_picture">Gagal mengambil foto</string>
    <string name="success_taking_picture">Berhasil mengambil foto</string>
    <string name="edit_photo">Edit foto</string>
    <string name="upload_photo">Upload foto</string>
    <string name="please_choose_type_name">Tipe belum dipilih</string>
    <string name="failed_to_start_camera">Gagal membuka kamera</string>
    <string name="zoom_touch_close">Pencet untuk zoom foto</string>
    <string name="back_to_prev_page">Kembali ke laman sebelumnya</string>
    <string name="close_photo_expand">Tutup expand foto</string>
    <string name="upload_succeed">Upload Berhasil</string>
    <string name="upload_succeed_message">Foto bukti berhasil di-upload</string>
    <string name="current_location_is_not_detected">Lokasi saat ini tidak terdeteksi pada perangkat Anda. Silahkan nyalakan GPS dan berjalan beberapa meter untuk mengkalibrasi GPS kemudian coba kembali</string>
    <string name="village_title">Kelurahan</string>
    <string name="colon">:</string>
    <string name="subdistrict_title">Kecamatan</string>
    <string name="city_title">Kabupaten</string>
    <string name="province_title">Provinsi</string>
    <string name="total">JUMLAH</string>
    <string name="total_vote">Jumlah Suara</string>
    <string name="total_vote_">Jumlah Suara: %s</string>
    <string name="total_vote_total">Total Suara</string>
    <string name="total_party_vote">Suara Partai</string>
    <string name="hasil_suara_tidak_sah">Hasil Suara Tidak Sah</string>
    <string name="data_perolehan_partai_s">Data Perolehan Partai %s</string>
    <string name="candidate_order_number_">Nomor Urut %d</string>
    <string name="approve_vote_terms">Saya sudah memasukkan dan memeriksa keseluruhan data dengan benar</string>
    <string name="send_data">Kirim Data</string>
    <string name="data_sent">Data Terkirim!</string>
    <string name="data_sent_successfully">Data berhasil terkirim</string>
    <string name="list_party_empty">Daftar partai / kandidat kosong!</string>
    <string name="filter_based_on_status">Pilih berdasarkan status</string>
    <string name="detail_semua_formulir">Detail Semua Formulir</string>
    <string name="save">Simpan</string>
    <string name="you_need_to_reinput">Anda perlu memasukkan ulang semua data jika kembali</string>
    <string name="all">Semua</string>
    <string name="not_sent_yet">Belum Dikirim</string>
    <string name="not_verified_yet">Belum Terverifikasi</string>
    <string name="verified">Sudah Terverifikasi</string>
    <string name="rejected">Ditolak</string>
    <string name="election_">Data %s</string>
    <string name="election_data_cannot_be_changed_anymore">Data sudah tidak dapat diubah kembali. Silahkan hubungi administrator jika ada perubahan</string>
    <string name="total_party_invalid_vote">Jumlah Suara Tidak Sah</string>
    <string name="data_rejected_">Data Ditolak: %s</string>
    <string name="internet_connection_is_back">Koneksi Internet Kembali</string>
    <string name="no_internet_connection">Tidak ada koneksi internet!</string>
    <string name="dismiss">Tutup</string>
    <string name="data_is_cache">Data yang tampil adalah data terakhir sebelum koneksi internet terputus dan dapat berubah ketika koneksi internet kembali</string>
    <string name="info">Info</string>
    <string name="will_be_sent_once_internet_available">Akan dikirim setelah koneksi internet kembali</string>
    <string name="download_in_progress">Download in progress</string>
    <string name="wait_to_be_sent">Menunggu Dikirim</string>
    <string name="please_do_not_close_app_during_sync">Mohon untuk tidak menutup aplikasi selama proses sinkronisasi</string>
    <string name="photo_1">Foto 1</string>
    <string name="photo_2">Foto 2</string>
    <string name="photo_3">Foto 3</string>
    <string name="photo_4">Foto 4</string>
    <string name="photo_5">Foto 5</string>
    <string name="photo_6">Foto 6</string>
    <string name="photo_7">Foto 7</string>
    <string name="data_wait_to_be_sent_">Data Menunggu Terkirim : %s</string>
</resources>