<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.tpselectionlist.TPSElectionListFragment"
    android:background="@android:color/white">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="0dp"
        app:strokeWidth="0dp"
        android:minHeight="90dp"
        app:cardElevation="5dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black_55_alpha"
            app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
            app:shapeAppearanceOverlay="@style/ShapeAppearance_bottom_corners"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/log_out"
                style="@style/LogoutButton"
                android:paddingVertical="0dp"
                android:paddingHorizontal="10dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4"
                />

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:minHeight="36dp"
                android:minWidth="36dp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_circle_left"
                android:layout_marginStart="26dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@android:color/white"/>

            <TextView
                android:id="@+id/tv_tps_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/detail_semua_formulir"
                android:textAppearance="@style/TextAppearance.Bold"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="@+id/btn_back"
                app:layout_constraintEnd_toStartOf="@+id/btn_logout"
                app:layout_constraintStart_toEndOf="@id/btn_back"
                app:layout_constraintTop_toTopOf="@+id/btn_back" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <HorizontalScrollView
        android:id="@+id/hsv_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mcv_toolbar"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >
        
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/cg_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true"
            >

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                style="@style/CustomChip"
                android:checked="true"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_not_sent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_sent_yet"
                style="@style/CustomChip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_wait_to_sent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wait_to_be_sent"
                style="@style/CustomChip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_not_verified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_verified_yet"
                style="@style/CustomChip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_verified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verified"
                style="@style/CustomChip" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_filter_rejected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rejected"
                style="@style/CustomChip" />

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>
    
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_tps_election"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hsv_filter">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_filter_dropdown"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_tps"
                tools:itemCount="10"
                />

            <include
                android:id="@+id/layout_loader"
                android:layout_width="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_filter_dropdown"
                layout="@layout/layout_loader_and_error"
                android:layout_height="match_parent" />
            
        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    

</androidx.constraintlayout.widget.ConstraintLayout>