<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.locationpermission.LocationPermissionFragment"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_courier"
            android:layout_width="235dp"
            android:layout_height="235dp"
            android:src="@drawable/courier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="140dp"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/tv_location_permission_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/location_permission_required"
            android:textColor="@color/arsenic"
            android:textAppearance="@style/TextAppearance.Bold"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/iv_courier"
            app:layout_constraintStart_toStartOf="@+id/iv_courier"
            app:layout_constraintTop_toBottomOf="@id/iv_courier" />

        <TextView
            android:id="@+id/tv_location_permission_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginHorizontal="70dp"
            android:text="@string/location_permission_description"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Medium"
            android:textColor="@color/arsenic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_location_permission_title" />

        <TextView
            android:id="@+id/tv_location_permission_req"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="36dp"
            android:text="@string/location_permission_request"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Bold"
            android:textColor="@color/arsenic"
            app:layout_constraintEnd_toEndOf="@+id/iv_courier"
            app:layout_constraintStart_toStartOf="@+id/iv_courier"
            app:layout_constraintTop_toBottomOf="@+id/tv_location_permission_desc" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_request_loc_permission"
            android:layout_width="200dp"
            android:layout_marginTop="26dp"
            android:layout_height="wrap_content"
            app:cornerRadius="4dp"
            android:text="@string/give_access"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_location_permission_req" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</ScrollView>