<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.selfiattps.SelfiAtTPSFragment"
    android:background="@android:color/white">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="0dp"
        app:strokeWidth="0dp"
        android:minHeight="90dp"
        app:cardElevation="5dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_blue"
            app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
            app:shapeAppearanceOverlay="@style/ShapeAppearance_bottom_corners"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@android:color/transparent"
                android:src="@drawable/task"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_circle_left"
                android:layout_marginStart="26dp"
                android:layout_marginTop="23dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@android:color/white"/>

            <TextView
                android:id="@+id/tv_selfi_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:fontFamily="@font/bold_700"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_marginTop="21dp"
                app:layout_constraintEnd_toStartOf="@+id/iv_task"
                app:layout_constraintStart_toEndOf="@id/btn_back"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/selfi_at_tps" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/tv_selfi_info"
        style="@style/TextAppearance.Bold.Small"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="27dp"
        android:layout_marginTop="25dp"
        android:text="@string/take_selfi_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mcv_toolbar" />
    
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mcv_take_photo"
        android:layout_width="0dp"
        android:layout_height="305dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_selfi_info"
        app:layout_constraintStart_toStartOf="@+id/tv_selfi_info"
        app:layout_constraintTop_toBottomOf="@+id/tv_selfi_info">

        <LinearLayout
            android:id="@+id/ll_take_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/dashed_border"
            android:orientation="vertical"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_selfi_info"
            app:layout_constraintStart_toStartOf="@+id/tv_selfi_info"
            app:layout_constraintTop_toBottomOf="@+id/tv_selfi_info">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="105dp"
                android:src="@drawable/ic_camera_plus"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/tv_take_photo"
                style="@style/TextAppearance.Bold.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="27dp"
                android:layout_marginTop="25dp"
                android:text="@string/take_photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mcv_toolbar" />

        </LinearLayout>
        
        <ImageView
            android:id="@+id/iv_selfi_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:src="@drawable/dummy_selfi"
            android:scaleType="fitXY"
            android:visibility="gone"
            android:contentDescription="@string/selfi_result" />
        
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="14dp"
        android:layout_marginHorizontal="25dp"
        android:paddingHorizontal="10dp"
        android:text="@string/next"
        android:textAllCaps="true"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    
</androidx.constraintlayout.widget.ConstraintLayout>